--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
             height:1000px;
         }
         body{
-            background-image: url("http://hdwallpapersfit.com/wp-content/uploads/2015/03/dota-2-logo-wallpaper-hd.jpg");
+            background-image: url("https://s3-ap-southeast-1.amazonaws.com/bucketrandom/dota2/dota2-background.jpg");
             background-position: center;
             padding:0px!important;
         }
@@ -384,7 +384,7 @@
             <div class="hero-selection">
                 {% for hero in heroes %}
                 <a id="{{ hero.id }}" class="hero-selected" href="javascript:;">
-                    <img src="static/images/hero_{{ hero.id }}.png" />
+                    <img src="https://s3-ap-southeast-1.amazonaws.com/bucketrandom/dota2/hero_{{ hero.id }}.png" />
                 </a>
                 {% endfor %}
             </div>
